# ab-self-upgrade

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ab-self-upgrade.md
crates/ab-self-upgrade/: Cargo.toml
crates/ab-self-upgrade-example/: Cargo.toml
crates/ab-self-upgrade-example/src/: main.rs
crates/ab-self-upgrade/src/: config.rs  downloader.rs  engine.rs  error.rs  layout.rs  lib.rs  metadata.rs  reporter.rs  state.rs  verifier.rs
