[package]
name = "ab-self-upgrade"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
